fixed:txt_align_issue

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -41,6 +41,13 @@ a{
     margin: 0.5rem 0;
     text-align: center;
   }
+
+  .mian-des-1-left{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin: 0.5rem 0;
+    text-align: left;
+  }
   
   .main-des-2{
     color: rgb(220 38 38);
